2007-08-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

PR middle-end/32399
        * tree-ssa-address.c (add_to_parts): Use POINTER_PLUS_EXPR
        when adding to the base and convert ELT to sizetype instead of type.

2007-08-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        RP middle-end/32399
        * gcc.c-torture/compile/pr32399.c: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127196 138bc75d-0d04-0410-961f-82ee72b054a4